crates/alien-cloudformation/tests/generator/snapshots/generator__generator__gating_matrix_tests__enabled_gated_vault.snap
---
source: crates/alien-cloudformation/tests/generator/gating_matrix_tests.rs
expression: yaml
---
AWSTemplateFormatVersion: 2010-09-09
Description: gated vault stack
Transform:
- AWS::LanguageExtensions
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: Registration
      Parameters:
      - Token
      - ManagingRoleArn
      - ManagingAccountId
    - Label:
        default: Application inputs
      Parameters:
      - InputFixtureEnabled
    - Label:
        default: Operations
      Parameters:
      - UpdatesMode
      - TelemetryMode
      - HeartbeatsMode
    ParameterLabels:
      HeartbeatsMode:
        default: Heartbeats
      InputFixtureEnabled:
        default: Enable the fixture resource
      ManagingAccountId:
        default: Image account ID
      ManagingRoleArn:
        default: Management role ARN
      TelemetryMode:
        default: Telemetry
      Token:
        default: Install token
      UpdatesMode:
        default: Updates
Parameters:
  Token:
    Type: String
    Description: Install token from the application setup page.
    NoEcho: true
  ManagingRoleArn:
    Type: String
    Description: ARN of the management identity allowed to assume setup-created roles.
    Default: ''
  ManagingAccountId:
    Type: String
    Description: AWS account ID for the management account that hosts application container images.
    Default: ''
  NetworkMode:
    Type: String
    Description: Choose create-new for a managed VPC, use-existing for your VPC, or use-default for the account default VPC.
    Default: create-new
    AllowedValues:
    - create-new
    - use-existing
    - use-default
  EndpointAccess:
    Type: String
    Description: Who can reach this deployment's endpoints. Private access requires AWS managed containers and cannot change after setup.
    Default: internet
    AllowedValues:
    - internet
    - private
  UpdatesMode:
    Type: String
    Description: How updates are applied after setup registration.
    Default: auto
    AllowedValues:
    - auto
    - approval-required
  TelemetryMode:
    Type: String
    Description: Telemetry collection behavior.
    Default: auto
    AllowedValues:
    - auto
  HeartbeatsMode:
    Type: String
    Description: Heartbeat health-check behavior.
    Default: "on"
    AllowedValues:
    - "off"
    - "on"
  InputFixtureEnabled:
    Type: String
    Description: Whether to create the gated matrix fixture.
    Default: 'true'
    AllowedValues:
    - 'true'
    - 'false'
Conditions:
  InputFixtureEnabledIsTrue:
    Fn::Equals:
    - Ref: InputFixtureEnabled
    - 'true'
Resources:
  DeploymentRegistration:
    Type: AWS::CloudFormation::CustomResource
    Properties:
      ServiceToken: arn:aws:lambda:us-east-1:123456789012:function:register
      Token:
        Ref: Token
      DeploymentName:
        Ref: AWS::StackName
      ResourcePrefix:
        Ref: AWS::StackName
      SourceKind: cloudformation
      Platform: aws
      Region:
        Ref: AWS::Region
      SetupTarget: aws
      SetupImportFormatVersion: 1
      SetupFingerprint: test
      SetupFingerprintVersion: 1
      ManagementConfig:
        platform: aws
        managingRoleArn:
          Ref: ManagingRoleArn
      StackSettings:
        deploymentModel: push
        endpointAccess:
          Ref: EndpointAccess
        updates:
          Ref: UpdatesMode
        telemetry:
          Ref: TelemetryMode
        heartbeats:
          Ref: HeartbeatsMode
        network:
          Ref: AWS::NoValue
      Resources:
      - Fn::If:
        - InputFixtureEnabledIsTrue
        - id: fixture
          type: vault
          importData:
            accountId:
              Ref: AWS::AccountId
            region:
              Ref: AWS::Region
            parameterPrefix:
              Fn::Sub: ${AWS::StackName}-fixture
        - Ref: AWS::NoValue
      InputValues:
        fixtureEnabled:
          Ref: InputFixtureEnabled
